--- a/index.html
+++ b/index.html
@@ -102,10 +102,6 @@
                     <div class="stat-number">100%</div>
                     <div class="stat-label">Client Satisfaction</div>
                 </div>
-                <div class="stat-item">
-                    <div class="stat-number">40%</div>
-                    <div class="stat-label">Avg. Performance Boost</div>
-                </div>
             </div>
         </div>
     </section>
@@ -125,10 +121,8 @@
                     </div>
                     <p>I believe that good design is as little design as possible. My approach to development focuses on
                         clean code, performance, and user-centric functionality.</p>
-                    <p>Currently a Computer Science student at Universitas Terbuka, I spend my time exploring modern
-                        frontend technologies and
-                        building tools that solve real problems. I'm passionate about creating seamless user experiences
-                        and writing maintainable code.</p>
+                    <p>With a strong background in Computer Science and continuous exploration of modern frontend
+                        technologies, I focus on building tools that solve real problems.</p>
                     <p><strong>Why work with me?</strong> I prioritize clear communication, meet deadlines consistently,
                         and deliver production-ready code. Whether you need a complex dashboard, e-commerce platform, or
                         custom web application, I bring both technical expertise and reliability to every project.</p>
@@ -159,7 +153,7 @@
         <div class="container">
             <span class="section-label">Education</span>
             <div class="education-timeline">
-                <!-- Item 1 -->
+                <!-- 1 -->
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
@@ -189,7 +183,7 @@
                     <p>Pixel-perfect, responsive landing pages and multi-page websites optimized for conversions and
                         performance.</p>
                     <div class="service-meta">
-                        <span>Delivery: 3-7 days</span>
+                        <span>Est.Delivery: 3-7 days</span>
                     </div>
                 </div>
 
@@ -202,7 +196,7 @@
                     <p>Interactive data visualization dashboards with real-time charts, analytics, and intuitive
                         interfaces.</p>
                     <div class="service-meta">
-                        <span>Delivery: 5-14 days</span>
+                        <span>Est.Delivery: 5-14 days</span>
                     </div>
                 </div>
 
@@ -215,7 +209,7 @@
                     <p>Full-featured online stores with product catalogs, shopping carts, and seamless checkout
                         experiences.</p>
                     <div class="service-meta">
-                        <span>Delivery: 7-21 days</span>
+                        <span>Est.Delivery: 7-21 days</span>
                     </div>
                 </div>
 
@@ -228,7 +222,7 @@
                     <p>Tailored React or Vue.js applications built to your exact specifications with clean, maintainable
                         code.</p>
                     <div class="service-meta">
-                        <span>Delivery: Varies by scope</span>
+                        <span>Est.Delivery: Varies by scope</span>
                     </div>
                 </div>
             </div>
@@ -363,11 +357,10 @@
             <span class="section-label">Certifications</span>
 
             <div class="certificates-grid">
-                <!-- Certificate 1 (Placeholder) -->
+                <!-- Certificate 1 -->
                 <div class="certificate-item">
                     <div class="cert-image">
-                        <!-- Placeholder Image: Replace src with your image -->
-                        <img src="img/sertifikatmyskillFE.png" alt="Certificate Name">
+                        <img src="img/sertifikatmyskillFE.png" alt="MySkill Sertifikat Frontend">
                     </div>
                     <div class="cert-info">
                         <h3>Web Development : Frontend</h3>
