Menambahkan project baru

--- a/index.html
+++ b/index.html
@@ -23,14 +23,6 @@
         content="Experienced Frontend Developer specializing in React dashboards & e-commerce solutions. Delivering high-performance web applications with 40% efficiency gains.">
     <meta property="og:image" content="https://portofolio-naofal.vercel.app/img/profile.png">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://portofolio-naofal.vercel.app/">
-    <meta property="twitter:title" content="Naofal Anas | Frontend Developer - React, Vue.js & JavaScript Expert">
-    <meta property="twitter:description"
-        content="Experienced Frontend Developer specializing in React dashboards & e-commerce solutions. Delivering high-performance web applications with 40% efficiency gains.">
-    <meta property="twitter:image" content="https://portofolio-naofal.vercel.app/img/profile.png">
-
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -288,6 +280,22 @@
                         <span>Service Platform</span>
                     </div>
                 </div>
+                <!-- Testimonial 4 -->
+                <div class="testimonial-card">
+                    <div class="rating">
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                    </div>
+                    <p class="testimonial-text">"Naofal Anas is a true professional. He delivered a project on time
+                        and exceeded our expectations. Would highly recommend for any frontend development needs."</p>
+                    <div class="testimonial-author">
+                        <strong>Landing Page Client</strong>
+                        <span>Construction Client</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -345,6 +353,17 @@
                         <h3>Crypto Tracker</h3>
                         <div class="project-meta">Mobile App • Vue.js</div>
                         <button class="btn-text open-modal-btn" data-project="cryptoapp"
+                            onclick="event.preventDefault(); event.stopPropagation();">Read Case Study</button>
+                    </div>
+                </a>
+                <a href="https://project-konstruksi.vercel.app" target="_blank" class="project-card">
+                    <div class="project-image">
+                        <img src="img/konstruksiss.png" alt="Project Konstruksi">
+                    </div>
+                    <div class="project-info">
+                        <h3>Construction Landing Page</h3>
+                        <div class="project-meta">AlpineJS & Tailwind CSS</div>
+                        <button class="btn-text open-modal-btn" data-project="konstruksi"
                             onclick="event.preventDefault(); event.stopPropagation();">Read Case Study</button>
                     </div>
                 </a>
