--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
                 <!-- Project 2 -->
                 <a href="https://dashboardsayurku.vercel.app/" target="_blank" class="project-card">
                     <div class="project-image">
-                        <img src="img/sayurkuss.png" alt="SayurKu Dashboard">
+                        <img src="img/ssdash.png" alt="SayurKu Dashboard">
                     </div>
                     <div class="project-info">
                         <h3>SayurKu Dashboard</h3>
-                        <div class="project-meta">Admin Panel • Chart.js</div>
+                        <div class="project-meta">Admin Panel • Chart.js • ReactJS</div>
                         <button class="btn-text open-modal-btn" data-project="sayurku"
                             onclick="event.preventDefault(); event.stopPropagation();">Read Case Study</button>
                     </div>
