Renew hero section

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Naofal Anas | Frontend Developer - React, Vue.js & JavaScript Expert</title>
-    <meta name="title" content="Naofal Anas | Frontend Developer - React, Vue.js & JavaScript Expert">
+    <title>Naofal Anas | React Dashboard & E-commerce Specialist</title>
+    <meta name="title" content="Naofal Anas | React Dashboard & E-commerce Specialist">
     <meta name="description"
-        content="Experienced Frontend Developer specializing in React dashboards & e-commerce solutions. Delivering high-performance web applications with 40% efficiency gains. Available for hire on Upwork.">
+        content="Specialized in building high-performance React dashboards & e-commerce frontends. 5+ successful projects with measurable business impact. Available for hire on Upwork.">
     <meta name="keywords"
-        content="frontend developer, react developer, vue.js developer, javascript developer, web developer, UI developer, dashboard developer, e-commerce developer, upwork developer, freelance developer">
+        content="react dashboard developer, e-commerce frontend developer, react specialist, dashboard specialist, upwork react developer, freelance react developer, data visualization, chart.js developer">
     <meta name="author" content="Naofal Anas Setianto">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portofolio-naofal.vercel.app/">
-    <meta property="og:title" content="Naofal Anas | Frontend Developer - React, Vue.js & JavaScript Expert">
+    <meta property="og:title" content="Naofal Anas | React Dashboard & E-commerce Specialist">
     <meta property="og:description"
-        content="Experienced Frontend Developer specializing in React dashboards & e-commerce solutions. Delivering high-performance web applications with 40% efficiency gains.">
+        content="Specialized in building high-performance React dashboards & e-commerce frontends. 5+ successful projects with measurable business impact. Available on Upwork.">
     <meta property="og:image" content="https://portofolio-naofal.vercel.app/img/profile.png">
 
     <!-- Favicon -->
@@ -60,7 +60,10 @@
             <div class="nav-links">
                 <a href="#projects">Work</a>
                 <a href="#about">About</a>
+                <a href="#faq">FAQ</a>
                 <a href="#contact">Contact</a>
+                <a href="https://www.upwork.com/freelancers/~01d8800582a64c5976" target="_blank"
+                    class="btn btn-upwork">Hire on Upwork</a>
                 <button id="theme-toggle" class="theme-btn" aria-label="Toggle Dark Mode">
                     <i data-feather="moon"></i>
                 </button>
@@ -75,12 +78,15 @@
     <!-- Hero -->
     <section class="hero">
         <div class="container hero-content">
-            <h1>Building High-Performance Web Applications That Drive Results.</h1>
-            <p>Frontend Developer specializing in React dashboards & e-commerce solutions. I help businesses transform
-                complex data into intuitive interfaces, delivering projects on time with clean, maintainable code.
+            <h1>React Dashboard & E-commerce Specialist</h1>
+            <p>I build high-performance dashboards and e-commerce frontends that drive real business results.
+                From data visualization to seamless shopping experiences — delivered on time with clean, maintainable
+                code.
             </p>
             <div class="btn-group">
                 <a href="#projects" class="btn btn-primary">View Work</a>
+                <a href="https://www.upwork.com/freelancers/~01d8800582a64c5976" target="_blank"
+                    class="btn btn-upwork"><i data-feather="briefcase"></i> Hire Me on Upwork</a>
                 <a href="#contact" class="btn btn-outline">Get in Touch</a>
             </div>
 
@@ -384,6 +390,117 @@
                     <div class="cert-info">
                         <h3>Web Development : Frontend</h3>
                         <p class="cert-issuer">Issued by MySkill • 2025</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ -->
+    <section id="faq" class="section faq-section">
+        <div class="container">
+            <span class="section-label">Frequently Asked</span>
+            <h2 class="section-title">Common Questions</h2>
+
+            <div class="faq-grid">
+                <!-- FAQ 1 -->
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What's your typical project timeline?</span>
+                        <i data-feather="plus"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>It depends on the scope, but here's a general guide:</p>
+                        <ul>
+                            <li><strong>Landing Pages:</strong> 3-7 days</li>
+                            <li><strong>Dashboards:</strong> 1-2 weeks</li>
+                            <li><strong>E-commerce:</strong> 2-3 weeks</li>
+                        </ul>
+                        <p>I always provide a detailed timeline before starting.</p>
+                    </div>
+                </div>
+
+                <!-- FAQ 2 -->
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What are your rates?</span>
+                        <i data-feather="plus"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>I work with both hourly and fixed-price contracts on Upwork. Rates vary by project
+                            complexity:</p>
+                        <ul>
+                            <li><strong>Hourly:</strong> Competitive rates visible on my Upwork profile</li>
+                            <li><strong>Fixed Price:</strong> We agree on scope and budget upfront</li>
+                        </ul>
+                        <p>Send me your project details for a custom quote!</p>
+                    </div>
+                </div>
+
+                <!-- FAQ 3 -->
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>How do you handle communication?</span>
+                        <i data-feather="plus"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Clear communication is my priority. I provide:</p>
+                        <ul>
+                            <li>Daily/weekly progress updates (your preference)</li>
+                            <li>Quick responses during working hours (GMT+7)</li>
+                            <li>Regular milestone reviews and demos</li>
+                        </ul>
+                        <p>I use Upwork Messages, Slack, or your preferred platform.</p>
+                    </div>
+                </div>
+
+                <!-- FAQ 4 -->
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What's your revision policy?</span>
+                        <i data-feather="plus"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Client satisfaction matters. My policy includes:</p>
+                        <ul>
+                            <li><strong>2-3 revision rounds</strong> included in every project</li>
+                            <li>Minor tweaks always free during development</li>
+                            <li>Clear scope definition to avoid misunderstandings</li>
+                        </ul>
+                        <p>I won't mark a project complete until you're 100% happy.</p>
+                    </div>
+                </div>
+
+                <!-- FAQ 5 -->
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Do you provide ongoing support?</span>
+                        <i data-feather="plus"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Yes! After project completion, I offer:</p>
+                        <ul>
+                            <li><strong>Free bug fixes</strong> for 14 days post-delivery</li>
+                            <li>Documentation for easy handoff</li>
+                            <li>Ongoing maintenance contracts available</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- FAQ 6 -->
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What technologies do you specialize in?</span>
+                        <i data-feather="plus"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>My core expertise:</p>
+                        <ul>
+                            <li><strong>Frameworks:</strong> React, Vue.js, AlpineJS</li>
+                            <li><strong>Styling:</strong> Tailwind CSS, Bootstrap, custom CSS</li>
+                            <li><strong>Data Viz:</strong> Chart.js, GSAP animations</li>
+                            <li><strong>Tools:</strong> Git, Vite, responsive design</li>
+                        </ul>
                     </div>
                 </div>
             </div>
